appId: com.cruxcoach.android
name: subflow-open-logbook
---
- runFlow: launch-browser.yaml
- tapOn:
    id: "board_logbook_icon"
- extendedWaitUntil:
    visible: "Board Logbook"
    timeout: 15000
- assertVisible:
    id: "logbook_back_button"

